unpackaged/main/default/objects/Marketing_Task_Template__c/Marketing_Task_Template__c.object-meta.xml
<CustomObject>
    <label>Marketing Task Template</label>
    <nameField>
        <label>Marketing Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>