unpackaged/main/default/objects/Marketing_Task_Template__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <label>Duration</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>