unpackaged/main/default/objects/Marketing_Task_Template__c/fields/Estimated_LOE__c.field-meta.xml
<CustomField>
    <fullName>Estimated_LOE__c</fullName>
    <label>Estimated LOE</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>