unpackaged/main/default/objects/Marketing_Task_Template__c/fields/Marketing_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactic__c</fullName>
    <label>Marketing Tactic</label>
    <referenceTo>Marketing_Tactic__c</referenceTo>
    <relationshipLabel>Marketing Task Templates</relationshipLabel>
    <relationshipName>Marketing_Task_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>