unpackaged/main/default/objects/Marketing_Task_Template__c/fields/Role_Selection__c.field-meta.xml
<CustomField>
    <fullName>Role_Selection__c</fullName>
    <label>Role Selection</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alphabet_Lettering</valueSetName>
    </valueSet>
</CustomField>