unpackaged/main/default/objects/Marketing_Task_Template__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Task_Type</valueSetName>
    </valueSet>
</CustomField>